  - Also remote API debugger commands can use expression expansion
  - Either single or double quotes can be used to mark expressions
    (above two features make temporary debug output easier within Hatari)
  - output what value was set by options if it's not otherwise shown by UI
  - Show function arguments (for values in intin and strings in addrin arrays)
    in AES traces
- Fileselector : remember previous position, handle large directory better

Other changes:
- HTML documentation indeces generated dynamically with JS
- Debugger tests building fixed

Fixed Games:
- Captain Blood (fixed problem with the clock)


 Version 1.6.2 (2012-06-24):
 ---------------------------

Emulation:
- ST video changes :
  - Fixes a rare potential crash when running in color mode and switching
    to monochrome mode for more than one VBL (eg : protection code used
    in The European Demos and The Transbeauce II Demo)
  - add more timings for the 224 bytes overscan detection on STE
  - Correct write timing for BCHG/BCLR/BSET when removing borders
  - Fix to top/bottom border removal in a rare case
- IKBD/ACIA changes :
  - Handle commands 0x12 and 0x14 sent during the IKBD reset
    (enable both mouse and joystick reporting at the same time)
  - Handle the TX IRQ in the ACIA (bits CR6+CR5=0x01)
  - Implemented IKBD set-clock function
- Sound changes :
  - Improve YM2149 sound filtering to be closer to a real STF
  - Increase output volume for STE DMA sound (compared to the YM2149's volume)
- DSP changes :
  - Fix to DSP stack overflow handling
  - Fix DSP to be reset on emulation reset
- Old UAE core specific changes :
  - Changes in the prefetch code for some instructions
  - Correct PC in stack when JMP generates an illegal address exception
- WinUAE core specific changes :
  - 68040 MMU emulation fixes
  - Fix GEMDOS/VDI emulation (illegal opcode) handling
  - Fix WinUAE core to work with ST emulation (boot TOS 1.x)
  - Fix FPU to be enabled when switching to TT emulation