@@ -718,6 +718,9 @@ arguments.  Atari printscreen call takes also Hatari screenshot.</p>
 redirection for given &lt;device&gt; to host terminal.  Device 2 is for
 the (CON:) VT52 console, which vector function catches also EmuTOS panic
 messages and MiNT console output, not just normal BIOS console output.</p>
+<p class="parameter">&minus;&minus;natfeats &lt;bool&gt;</p>
+<p class="paramdesc">Enable/disable (basic) Native Features support.
+E.g. EmuTOS uses it for debug output.</p>
 <p class="parameter">&minus;&minus;trace
 &lt;trace1,...&gt;</p>
 <p class="paramdesc">Activate debug traces, see
