@@ -99,7 +99,7 @@ else()
 	add_executable(hatari ${SOURCES})
 endif(ENABLE_OSX_BUNDLE)
 
-target_link_libraries(hatari Debug Falcon GuiSdl Floppy UaeCpu ${SDL_LIBRARY})
+target_link_libraries(hatari Falcon GuiSdl Floppy UaeCpu Debug ${SDL_LIBRARY})
 
 if(MATH_FOUND AND NOT APPLE)
 	target_link_libraries(hatari ${MATH_LIBRARY})
