@@ -10,4 +10,4 @@ endif(ENABLE_DSP_EMU)
 add_library(Debug
             log.c debugui.c breakcond.c debugcpu.c debugInfo.c
             ${DSPDBG_C} evaluate.c history.c profile.c symbols.c
-	    console.c 68kDisass.c)
+	    natfeats.c console.c 68kDisass.c)
