@@ -1,0 +1,14 @@
+/*
+  Hatari - natfeats.h
+
+  This file is distributed under the GNU General Public License, version 2
+  or at your option any later version. Read the file gpl.txt for details.
+*/
+
+#ifndef HATARI_NATFEATS_H
+#define HATARI_NATFEATS_H
+
+extern Uint32 NatFeat_ID(Uint32);
+extern Uint32 NatFeat_Call(Uint32, bool isSuper);
+
+#endif /* HATARI_NATFEATS_H */
