@@ -137,6 +137,7 @@ enum {
 	OPT_DEBUG,		/* debug options */
 	OPT_BIOSINTERCEPT,
 	OPT_CONOUT,
+	OPT_NATFEATS,
 	OPT_TRACE,
 	OPT_TRACEFILE,
 	OPT_PARSE,
@@ -364,6 +365,8 @@ static const opt_t HatariOptions[] = {
 	  NULL, "Toggle X/Bios interception & Hatari XBios 255 support" },
 	{ OPT_CONOUT,   NULL, "--conout",
 	  "<device>", "Show console output (0-7, 2=VT-52 terminal)" },
+	{ OPT_NATFEATS, NULL, "--natfeats",
+	  "<bool>", "Whether Native Features support is enabled" },
 	{ OPT_TRACE,   NULL, "--trace",
 	  "<trace1,...>", "Activate emulation tracing, see '--trace help'" },
 	{ OPT_TRACEFILE, NULL, "--trace-file",
@@ -1637,6 +1640,11 @@ bool Opt_ParseParameters(int argc, const char * const argv[])
 				return Opt_ShowError(OPT_CONOUT, argv[i], "Invalid console device vector number");
 			}
 			fprintf(stderr, "Xcounout device %d vector redirection enabled.\n", ConOutDevice);
+			break;
+
+		case OPT_NATFEATS:
+			ok = Opt_Bool(argv[++i], OPT_NATFEATS, &ConfigureParams.Log.bNatFeats);
+			fprintf(stderr, "Native Features %s.\n", ConfigureParams.Log.bNatFeats ? "enabled" : "disabled");
 			break;
 
 		case OPT_PARACHUTE:
